# repo-intel

./: .editorconfig  .gitignore  .npmrc  AGENTS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
agents/: devops-engineer.md  platform-monorepo-engineer.md  qa-testing-engineer.md
crates/repo-intel-core/: Cargo.toml
crates/repo-intel-core/benches/: scan_bench.rs
crates/repo-intel-core/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
crates/repo-intel-core/src/context/: enricher.rs  mod.rs  roles.rs  serializer.rs
crates/repo-intel-core/src/detector/: deps.rs  folders.rs  mod.rs  patterns.rs
crates/repo-intel-core/src/scanner/: mod.rs  signal.rs  walker.rs
crates/repo-intel-core/tests/: context_test.rs  detector_test.rs  scanner_test.rs
crates/repo-intel-core/tests/fixtures/empty-repo/: .gitkeep
crates/repo-intel-core/tests/fixtures/monorepo/: package.json
crates/repo-intel-core/tests/fixtures/nextjs-basic/: package.json
crates/repo-intel-core/tests/fixtures/node-api/: package.json
crates/repo-intel-core/tests/fixtures/react-spa/: package.json
crates/repo-intel-core/tests/fixtures/rust-axum/: Cargo.toml
docs/: architecture.md  contributing.md  providers.md  templates.md
scripts/: build-all.sh  copy-binaries.sh  publish.sh
