[workspace]
members = ["crates/repo-intel-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eka Prasetia"]
license = "MIT"
repository = "https://github.com/ekaone/repo-intel"
rust-version = "1.94.0"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# File traversal
walkdir = "2"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
