[package]
name = "repo-intel-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core scanning, detection, and context-building library for repo-intel"

[[bin]]
name = "repo-intel"
path = "src/main.rs"

[lib]
name = "repo_intel_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "scan_bench"
harness = false
